--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-Flask==3.0.0
+Flask==2.3.3
+Flask-Login==0.6.3
+Flask-Bcrypt==1.0.1
 Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-WTForms==3.1.2
-
-plotly==5.22.0
-gunicorn==22.0.0
-pandas==2.1.4
+gunicorn
